<resources>
    <string name="app_name">Wallpaper Changer</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_undo">Undo</string>

    <string name="menu_checkbox_undo">Turn on Undo</string>

    <!--Placeholders-->
    <string name="placeholder">Here is some placeholder text. Hello! Goodbye!</string>
    <string name="placeholder_time">\??:??</string>

    <!--ScheduleDetailsFragment-->
    <string name="changing_time_label">Changing Time: </string>
    <string name="current_wallpaper_label">Set wallpaper as:</string>
    <string name="crop">Crop</string>

    <!--Content description for ImageViews-->
    <string name="mini_wallpaper_icon">Wallpaper icon</string>
    <string name="preview_wallpaper_icon">Preview image for the wallpaper</string>

    <string name="pref_time_picker_key">pref_key_time_picker</string>
    <string name="pref_time_picker_title">Set the Scheduled Time:</string>
    <string name="pref_time_picker_default_value">0:00</string>

</resources>
