<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/changing_time_label"
            android:text="@string/changing_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_gravity="start|top"
            android:paddingTop="16dp"/>

        <TextView
            android:id="@+id/changing_time"
            android:text="@string/placeholder_time"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_below="@id/changing_time_label" />

        <TextView
            android:id="@+id/current_wallpaper_label"
            android:text="@string/current_wallpaper_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/changing_time"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:paddingTop="32dp" />

        <ImageView
            android:id="@+id/wallpaper_preview"
            android:src="@drawable/placeholder_wallpaper_preview"
            android:contentDescription="@string/preview_wallpaper_icon"
            android:paddingTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_wallpaper_label"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_button"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal|bottom" />

</FrameLayout>
